--- a/style.css
+++ b/style.css
@@ -51,7 +51,12 @@ a:hover {
 	transition: all 0.5s ease-out;
 }
 
+.email {
+	opacity: 0.65;
+}
+
 .mobile {
+	padding-left: 1rem;
 	font-size: medium;
 }
 
@@ -67,13 +72,20 @@ a:hover {
 	margin: 1rem;
 }
 
+.special-badge {
+	border-radius: 5px;
+}
+
+.card-title {
+	padding-top: 0.5rem;
+}
+
 .card-text {
-	height: 50px;
+	height: 70px;
 	overflow-x: scroll;
 	width: 100%;
 }
 
 .btn {
-	opacity: 0.65;
 	color: white !important;
 }
