--- a/style.css
+++ b/style.css
@@ -72,9 +72,10 @@ a:hover {
 }
 
 .card {
+	margin: 1rem;
+	height: 390px;
 	background-color: black;
 	opacity: 0.7;
-	margin: 1rem;
 }
 
 .special-badge {
