--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a:hover {
 
 .email {
 	margin-bottom: 1rem;
-	opacity: 0.7;
+	/* opacity: 0.7; */
 }
 
 .mobile {
@@ -69,6 +69,23 @@ a:hover {
 .row > * {
 	padding-left: 0 !important;
 	padding-right: 0 !important;
+}
+
+.frame {
+	margin: 1rem;
+	width: 19rem;
+	height: 25rem;
+}
+
+.image {
+	width: 19rem;
+	height: 11rem;
+	border: 1pt solid white;
+	border-radius: 5px;
+}
+
+.content {
+	padding: 0.5rem;
 }
 
 .card {
@@ -85,8 +102,8 @@ a:hover {
 	padding-top: 0.5rem;
 }
 
-.card-text {
-	height: 70px;
+.content-text {
+	height: 3rem;
 	overflow-x: scroll;
 	width: 100%;
 }
