--- a/style.css
+++ b/style.css
@@ -108,6 +108,18 @@ a:hover {
 	width: 100%;
 }
 
+.profile-pic {
+	display: inline-block;
+	margin: 1rem;
+	width: 13rem;
+	height: 13rem;
+	border-radius: 50%;
+	border: 2pt solid #eece1a;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+}
+
 .btn {
 	color: white !important;
 }
