--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   	/* background: transparent !important; */
 }
 
-.navbar-brand {
+.navbar-brand {';ldkk;'
 	/* margin-left: 1rem; */
 }
 
